# turbopfor_rs

./: .gitignore  CHANGELOG  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO  TurboPFor-Integer-Compression.patch  build.rs  make.py  make2.py  patch.diff  sizes.rs  test.sh
.github/workflows/: ci.yml
.serena/: project.yml
c_headers/: bitpack.h  eliasfano.h  fp.h  vint.h  vp4.h  vsimple.h
make/: bitpack.py  eliasfano.py  vint.py  vp4.py  vsimple.py
src/: buffer.rs  codec.rs  enclen.rs  enclen_exe.rs  generic.rs  ic.rs  lib.rs  sample.rs  test.rs
